aggiunta conferma per eliminare e pulsante per filtrare con la data

--- a/static/messages.html
+++ b/static/messages.html
@@ -16,7 +16,7 @@
 
     <input id="taskText" placeholder="Nuovo messaggio...">
     <button onclick="addTask()">➕ Aggiungi</button>
-
+    <button onclick="sortMessages()" class="button_data">Ordina per data</button>
     <ul id="taskList"></ul>
 
     <button onclick="logout()" class="logout">Logout</button>
