aggiunto pulsante per tornare in alto alla pagina

--- a/static/messages.html
+++ b/static/messages.html
@@ -18,8 +18,9 @@
     <button onclick="addTask()">➕ Aggiungi</button>
     <button onclick="sortMessages()" class="button_data">Ordina per data</button>
     <ul id="taskList"></ul>
-
+    <button id="scrollToTop" onclick="scrollToTop()">Torna su</button>
     <button onclick="logout()" class="logout">Logout</button>
+
 </div>
 
 <script src="app.js"></script>
