--- a/static/messages.html
+++ b/static/messages.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container1">
     <h2>I miei messaggi</h2>
 
     <input id="taskText" placeholder="Nuovo messaggio...">
